<resources>
    <string name="app_name">Samuha</string>
    <string name="font_name_roboto_bold">RobotoBold</string>
    <string name="font_name_roboto_medium">RobotoMedium</string>
    <string name="font_name_square">SquareFont</string>
    <string name="digi_now">Digi Now</string>
    <string name="tech_now">Tech Now</string>
    <string name="cyber_now">Cyber Now</string>
    <string name="beta_now">Beta Now</string>
    <string name="team_name">Team name</string>
    <string name="captain_name">Captain Name</string>
    <string name="vice_captain_name">Vice Captain</string>
    <string name="department">Departments</string>
    <string name="enter_mobile_no">Mobile Number</string>
    <string name="enter_employee_id">Employee Id</string>
    <string name="invite">Invite</string>
    <string name="skip">SKIP</string>
    <string name="login">Login</string>
    <string name="alert_no_internet">Internet Not Available!</string>
    <string name="eneter_valid_mobile_no">Enter valid mobile Number.</string>
    <string name="invite_family">Invite family</string>
    <string name="enter_atleast_one_number">Atleast one mobile number is Required.</string>
    <string name="score">Scoreboard</string>
    <string name="today_event">Today\'s Events</string>
    <string name="announcement">Announcements</string>
    <string name="events">Events</string>
    <string name="cotest">Contest</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="video">Select Video</string>
    <string name="image">Select Image</string>
    <string name="tag">#Tag</string>
    <string name="updates">Updates</string>
    <string name="contests">Contests</string>
    <string name="select_type">Select Type</string>
    <string name="Singing">Singing</string>
    <string name="music">Music</string>
    <string name="dance">Dance</string>
    <string name="other">Other</string>
    <string name="performed_by">Performed By</string>
    <string name="employee">Employee</string>
    <string name="spouse">Spouse</string>
    <string name="son">Son</string>
    <string name="daughter">Daughter</string>
    <string name="auditions">Auditions</string>
    <string name="enter_code">Enter code</string>
    <string name="code_here">Enter your code here</string>
    <string name="login_using_code">Have a code? Login.</string>
    <string name="grand_events">Grand Finale</string>
    <string name="description_zoom_touch_close">zoomingimage</string>
    <string name="empty">0</string>
    <string name="logout">Logout</string>
    <string name="family_day">Family Day 2</string>
    <string name="family_day1">Family Day 1</string>
</resources>
