<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">
    <LinearLayout
        android:layout="@+id/layoutGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:id="@+id/linearLayout">
    <ImageView
        android:id="@+id/imgGallery"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/tab_gallery_memory" />
        <com.stgobain.samuha.CustomUserInterface.CustomFontButton
            android:id="@+id/btnGallery"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:font="@string/font_name_square"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginStart="10dp">
    <ImageView
        android:id="@+id/imgUpload"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/tab_upload_memory" />
        <com.stgobain.samuha.CustomUserInterface.CustomFontButton
            android:id="@+id/btnUpload"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:font="@string/font_name_square"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner"/>
    </LinearLayout>
</LinearLayout>
</RelativeLayout>