<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:titleMarginStart="12dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:id="@+id/layoutTeamdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/imgTeamLogo"
        android:layout_below="@+id/toolbar">
    <com.stgobain.samuha.CustomUserInterface.CustomFontTextView
        android:id="@+id/txtTeamCaptainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_tab_unselected"
        android:textSize="14sp"
        android:text="@string/captain_name"
        android:layout_marginTop="15dp"
        app:font="@string/font_name_square"
        android:textStyle="normal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
         />
    <com.stgobain.samuha.CustomUserInterface.CustomFontTextView
        android:id="@+id/txtTeamCaptainNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text=""
        android:layout_below="@id/txtTeamCaptainName"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        app:font="@string/font_name_square"
        android:textStyle="bold"/>
    <com.stgobain.samuha.CustomUserInterface.CustomFontTextView
        android:id="@+id/txtViceCaptainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_tab_unselected"
        android:textSize="14sp"
        android:text="@string/vice_captain_name"
        android:layout_marginTop="10dp"
        app:font="@string/font_name_square"
        android:textStyle="normal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/txtTeamCaptainNameInput" />
    <com.stgobain.samuha.CustomUserInterface.CustomFontTextView
        android:id="@+id/txtViceCaptainNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text=""
        android:layout_below="@id/txtViceCaptainName"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        app:font="@string/font_name_square"
        android:textStyle="bold"/>
        <com.stgobain.samuha.CustomUserInterface.CustomFontTextView
            android:id="@+id/txtScoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_tab_unselected"
            android:textSize="14sp"
            android:text="@string/score"
            android:layout_below="@id/txtViceCaptainNameInput"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            app:font="@string/font_name_square" />
        <com.stgobain.samuha.CustomUserInterface.CustomFontTextView
            android:id="@+id/txtScoreNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:text="Cloud Hackers"
            android:layout_below="@id/txtScoreName"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="8dp"
            app:font="@string/font_name_square" />
    </RelativeLayout>
    <com.stgobain.samuha.CustomUserInterface.CustomFontTextView
        android:id="@+id/txtDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_tab_unselected"
        android:textSize="14sp"
        android:text="@string/department"
        android:layout_marginTop="10dp"
        app:font="@string/font_name_square"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/layoutTeamdetails" />
    <ImageView
        android:id="@+id/imgTeamLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/tech_now_flag"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="19dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignStart="@+id/txtDepartment"
        android:layout_marginTop="31dp" />
    <ListView
        android:id="@+id/listDepartment"
        android:layout_below="@id/txtDepartment"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </ListView>
</RelativeLayout>